[gd_scene load_steps=5 format=3 uid="uid://cw6b415ocy2t2"]

[ext_resource type="Script" path="res://src/menu.gd" id="1_t5igk"]
[ext_resource type="PackedScene" uid="uid://cp8oeuj383dlo" path="res://src/audio.tscn" id="2_1yg6l"]
[ext_resource type="Texture2D" uid="uid://dh7gfjy0doiqu" path="res://textures/cover.png" id="2_ek144"]
[ext_resource type="PackedScene" uid="uid://bk4n0lhh8fddm" path="res://src/settings.tscn" id="3_ts47l"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_t5igk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_ek144")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -660.5
offset_right = 660.5
offset_bottom = 164.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 164
text = "TORCHLIGHTER"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.6
anchor_right = 0.35
anchor_bottom = 0.8
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 72
text = "PLAY"

[node name="HowToPlay" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 72
text = "TUTORIAL"

[node name="Settings" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 72
text = "SETTINGS"

[node name="Settings" parent="." instance=ExtResource("3_ts47l")]
visible = false
layout_mode = 1
offset_left = -200.0
offset_top = -280.0
offset_right = 200.0
offset_bottom = 280.0

[node name="Audio" parent="." instance=ExtResource("2_1yg6l")]

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="back_pressed" from="Settings" to="." method="_on_settings_back_button_pressed"]
